# wallplotter

./: .gitignore  CMakeLists.txt  README.md  Switch Start & Stop function
docu/: README.txt
platform/arduinomega/: .gitignore  CMakeLists.txt  README.txt  main.c  main.cpp  platformio.ini
platform/arduinomega/src/: main.cpp
platform/esp32/: .gitignore  CMakeLists.txt  README.txt  platformio.ini
platform/esp32/src/: Servo  main.cpp  servoOff.cpp  servoOn  startFunction  stateFunction  stateFunction.cpp  stepperController.cpp  stopFunction  tournerServo
platform/pc/: README.txt  myExcel.xlsm
platform/pc/javafx-archetype-simple/: output.txt  pom.xml
platform/pc/javafx-archetype-simple/src/main/java/org/openjfx/: App.java  ServerTest.java  TxtToArduino.java  Wallplotter.java  WallplotterServer.java  svgExtragtMetadata.java  txtToArduino.java
platform/pc/javafx-archetype-simple/src/test/java/org/openjfx/: AppTest.java
